--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -39,7 +40,7 @@ body {
 
 /* HEADER */
 
-header > h1 {
+header>h1 {
   width: 20vw;
 }
 
@@ -58,18 +59,19 @@ nav {
   padding: 30px;
 }
 
-.nav-ul > li {
+.nav-ul>li {
   list-style: none;
   padding: 20px;
   color: white;
 }
 
-.nav-ul > li:hover {
+.nav-ul>li:hover {
   color: white;
   background-color: var(--color-emphasis);
   border-radius: 10px;
 }
-.nav-ul > li > a {
+
+.nav-ul>li>a {
   text-decoration: none;
   color: inherit;
   font-size: 1.5rem;
@@ -105,17 +107,19 @@ video {
 
 #section-green {
   background-color: var(--color-verde);
+
 }
 
 /* opinions-section */
 
-#opinions > article {
+#opinions>article {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 10px 0;
 }
 
-#opinions > article > h3 {
-  font-weight: bold;
+#opinions>article>h3 {
   margin: 20px 0;
 }
 
@@ -128,4 +132,25 @@ video {
 .author-comment {
   margin-right: 0;
   color: red;
+}
+
+/* footer */
+
+footer {
+    background-color: var(--color-verde);
+    padding: 10px 0;
+}
+.footer-div {
+  background-color: var(--color-verde);
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.contacts>div>img {
+  width: 10px;
+}
+
+.hsg-footer__nav-item {
+  list-style-type: none;
 }
