--- a/css/style.css
+++ b/css/style.css
@@ -8,41 +8,54 @@
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Dancing Script", cursive;
+h2, h3 {
+  font-family: "Dancing Script", cursive;;
 }
+
+
+h2 {font-size: 50px;}
+
+
+
 
 /* Color verde para el menú y footer */
 
 :root {
   --color-verde: #053617;
-  --color-emphasis: rgb(117, 76, 26);
   --width-content: 1200px;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  /* background-image: url(../img/background.png); */
-  background-size: cover;
+  --color-emphasis:  rgb(58, 240, 17);
 }
 
 .width-content {
   margin: 0 auto;
   max-width: var(--width-content);
+} 
+
+.color-green {
+  background-color: var(--color-verde);
+  color: white;
 }
+html {
+  scroll-behavior: smooth;
+}
+body {
+  background-size: cover;
+}
+
+
 
 /* HEADER */
-
-header>h1 {
-  width: 20vw;
+header img {
+  width: 100%;
 }
+
+.title-caffe {position: absolute;
+  top: 5%;
+  right: 10% ;  
+  color: white;
+  width: 30vw;
+}
+
 
 /* NAV */
 nav {
@@ -55,7 +68,7 @@ nav {
 
 .nav-ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   padding: 30px;
 }
 
@@ -66,7 +79,7 @@ nav {
 }
 
 .nav-ul>li:hover {
-  color: white;
+  color: black;
   background-color: var(--color-emphasis);
   border-radius: 10px;
 }
@@ -77,6 +90,10 @@ nav {
   font-size: 1.5rem;
 }
 
+.text-decore {
+ text-decoration: overline;
+}
+
 /*  main  content container */
 
 /* section white */
@@ -84,30 +101,29 @@ nav {
 article {
   display: flex;
   justify-content: center;
-  margin: 0 25%;
 }
 
 article p {
-  font-size: 20px;
+  font-size: 25px;
+  text-align: justify;
 }
 
 article div {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 10%;
+  padding: 0 5%;
 }
 
-article img,
-video {
-  width: 50%;
+article img, video {
+  
+  max-width: 50%;
 }
 
 /* section green */
 
 #section-green {
   background-color: var(--color-verde);
-
 }
 
 /* opinions-section */
@@ -119,38 +135,50 @@ video {
   padding: 10px 0;
 }
 
-#opinions>article>h3 {
+#opinions>article>h2 {
   margin: 20px 0;
+  text-align: center;
 }
 
 .opinions-container {
   display: flex;
   flex-direction: row;
   align-items: start;
+
 }
 
 .author-comment {
   margin-right: 0;
   color: red;
+  text-align: end;
 }
 
 /* footer */
 
-footer {
-    background-color: var(--color-verde);
-    padding: 10px 0;
-}
-.footer-div {
+
+
+.footer-container {
   background-color: var(--color-verde);
   display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: 10px;
-}
+  
+ }
 
+
+
+.logos  {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 0;
+
+}
 .contacts>div>img {
   width: 10px;
 }
 
 .hsg-footer__nav-item {
   list-style-type: none;
-}
+} 
