--- a/css/style.css
+++ b/css/style.css
@@ -128,14 +128,14 @@ article img, video {
 
 /* opinions-section */
 
-#opinions>article {
+#opinions {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px 0;
 }
 
-#opinions>article>h2 {
+#opinions > h2 {
   margin: 20px 0;
   text-align: center;
 }
@@ -147,10 +147,18 @@ article img, video {
 
 }
 
+.comment-blockquote {
+  text-align: justify;
+  font-style: italic;
+  font-size: 30px;
+}
+
 .author-comment {
+  padding-bottom: 30px;
   margin-right: 0;
   color: red;
   text-align: end;
+  font-size: 20px;
 }
 
 /* footer */
