--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ article img, video {
 #opinions {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  
   padding: 10px 0;
 }
 
@@ -169,7 +169,7 @@ article img, video {
   background-color: var(--color-verde);
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   gap: 10px;
   
  }
@@ -180,7 +180,7 @@ article img, video {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin: 0;
+  padding: 0;
 
 }
 .contacts>div>img {
