--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h2 {font-size: 50px;}
 
 
 /* Color verde para el menú y footer */
-
+/* creaer variables en css para utilizar en nuestro proyecto */
 :root {
   --color-verde: #053617;
   --width-content: 1200px;
@@ -31,10 +31,7 @@ h2 {font-size: 50px;}
   max-width: var(--width-content);
 } 
 
-.color-green {
-  background-color: var(--color-verde);
-  color: white;
-}
+
 html {
   scroll-behavior: smooth;
 }
@@ -49,11 +46,17 @@ header img {
   width: 100%;
 }
 
+.color-green {
+  background-color: var(--color-verde);
+  color:white ;
+}
+
 .title-caffe {position: absolute;
   top: 5%;
-  right: 10% ;  
+  right: 15% ;  
   color: white;
   width: 30vw;
+  font-size: 50px;
 }
 
 
@@ -62,7 +65,6 @@ nav {
   position: sticky;
   top: 0;
   background-color: var(--color-verde);
-  z-index: 2;
   margin-top: -5px;
 }
 
@@ -96,7 +98,8 @@ nav {
 
 /*  main  content container */
 
-/* section white */
+
+/* sections white & green */
 
 article {
   display: flex;
@@ -105,7 +108,6 @@ article {
 
 article p {
   font-size: 25px;
-  text-align: justify;
 }
 
 article div {
@@ -116,11 +118,10 @@ article div {
 }
 
 article img, video {
-  
-  max-width: 50%;
+    max-width: 50%;
 }
 
-/* section green */
+/* adding style for section green */
 
 #section-green {
   background-color: var(--color-verde);
@@ -131,7 +132,6 @@ article img, video {
 #opinions {
   display: flex;
   flex-direction: column;
-  
   padding: 10px 0;
 }
 
@@ -175,18 +175,30 @@ article img, video {
  }
 
 
-
 .logos  {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  padding: 0;
+  justify-content:flex-start;
+  gap: 30px;
+  padding: 5px;
 
 }
 .contacts>div>img {
-  width: 10px;
+  width: 20px;
+  
+}
+
+a.format-link {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
 }
 
 .hsg-footer__nav-item {
   list-style-type: none;
 } 
+
+a.ga_nav_link {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.568);
+}
